Changes today this December 12 - Attempt to redesign the entire website based on experience made on a previous passion project - Made the navbar more accessible and neater - Try to make everything less dense and more readable

--- a/src/pages/web/index.astro
+++ b/src/pages/web/index.astro
@@ -1,12 +1,12 @@
 ---
-import Layout from "../../layouts/BaseLayout.astro";
+import Layout from "../../layouts/PageLayout.astro";
 import Section from "../../components/Section.astro";
 import BadgeContainer from "../../components/BadgeContainer.astro";
 
 import {
   frontendExperience,
   backendExperience,
-} from "../../data/webExperience.ts";
+} from "../../data/webExperience";
 
 // const images = await Astro.glob("src/assets/*").then((files) =>
 //   files.map((file) => file.default)
