--- a/src/pages/comp-experience/software/index.astro
+++ b/src/pages/comp-experience/software/index.astro
@@ -1,10 +1,10 @@
 ---
-import Layout from "../../layouts/BaseLayout.astro";
-import Section from "../../components/Section.astro";
+import Layout from "../../../layouts/BaseLayout.astro";
+import Section from "../../../components/Section.astro";
 
-import softwareExperience from "../../data/softwareExperience";
-import BadgeContainer from "../../components/BadgeContainer.astro";
-import ListContainer from "../../components/ListContainer.astro";
+import softwareExperience from "../../../data/softwareExperience";
+import BadgeContainer from "../../../components/BadgeContainer.astro";
+import ListContainer from "../../../components/ListContainer.astro";
 ---
 
 <Layout
