--- a/src/pages/comp-experience/game/index.astro
+++ b/src/pages/comp-experience/game/index.astro
@@ -1,12 +1,12 @@
 ---
-import Layout from "../../layouts/BaseLayout.astro";
-import Section from "../../components/Section.astro";
-import ExperienceBadge from "../../components/ExperienceBadge.astro";
-import BadgeContainer from "../../components/BadgeContainer.astro";
-import ProjectShowcase from "../../components/ProjectShowcase.astro";
+import Layout from "../../../layouts/BaseLayout.astro";
+import Section from "../../../components/Section.astro";
+import ExperienceBadge from "../../../components/ExperienceBadge.astro";
+import BadgeContainer from "../../../components/BadgeContainer.astro";
+import ProjectShowcase from "../../../components/ProjectShowcase.astro";
 
-import { gameProjects, gameExperience } from "../../data/game";
-import ProjectContainer from "../../components/ProjectContainer.astro";
+import { gameProjects, gameExperience } from "../../../data/game";
+import ProjectContainer from "../../../components/ProjectContainer.astro";
 ---
 
 <Layout
