clean up the ExperienceBadges

--- a/src/components/BadgeContainer.astro
+++ b/src/components/BadgeContainer.astro
@@ -9,6 +9,6 @@ interface Props {
 const { src } = Astro.props;
 ---
 
-<div class="flex flex-wrap justify-center items-stretch gap-4 lg:px-24">
-  {src.map((f) => <ExperienceBadge src={f} />)}
+<div class="flex flex-wrap justify-center gap-x-4 gap-y-6">
+  {src.map((badge) => <ExperienceBadge src={badge} />)}
 </div>
