--- a/src/components/ExperienceBadge.astro
+++ b/src/components/ExperienceBadge.astro
@@ -2,29 +2,30 @@
 import { Image } from "astro:assets";
 import type { ExperienceShowcase } from "../const";
 
-// type Props = ExperienceShowcase;
 interface Props {
   src: ExperienceShowcase;
 }
 
-// const { title, experience, alt, src } = Astro.props;
 const { src } = Astro.props;
 ---
 
 <div
-  class="flex flex-col justify-around items-center bg-gray-800 w-48 h-64 p-4 rounded-lg
+  class="group flex flex-col justify-around items-center bg-cyan-900 min-w-32 min-h-32 p-4 rounded-md
           hover:scale-110 transition-transform"
 >
   <Image
-    class="my-auto max-h-36 max-w-36"
+    class="flex-grow max-h-24 max-w-24"
     src={src.src}
     alt={src.alt}
-    width={150}
-    height={150}
+    width={100}
+    height={100}
+    decoding="async"
     loading="eager"
   />
   <div>
-    <h2 class="text-center">{src.title}</h2>
-    <h3 class="text-center text-xl">{src.experience}</h3>
+    <h2 class="text-center text-xl">{src.title}</h2>
+    <div class="w-fit px-1 mx-auto text-center text-sm bg-cyan-950 rounded-md">
+      {src.experience}
+    </div>
   </div>
 </div>
