--- a/src/pages/comp-experience/game/king-of-the-cheese.astro
+++ b/src/pages/comp-experience/game/king-of-the-cheese.astro
@@ -18,7 +18,7 @@ import Section from "../../../components/Section.astro";
     </p>
     <p>King of the Hat is rightfully owned by Hat Games</p>
   </Fragment>
-  <Section defaultFlex>
+  <Section textContentFlex>
     <h1>How it was created</h1>
     <div class="flex justify-center items-center gap-8">
       <p>
@@ -36,7 +36,7 @@ import Section from "../../../components/Section.astro";
     </p>
     <p>INSERT YOUTUBE CLIP</p>
   </Section>
-  <Section defaultFlex>
+  <Section textContentFlex>
     <h1>Problems</h1>
     <p>
       While the game's core gameplay is complete, there are a few things I've
@@ -53,7 +53,7 @@ import Section from "../../../components/Section.astro";
       animations, and polish, with some easter eggs and quality-of-life changes.
     </p>
   </Section>
-  <Section defaultFlex>
+  <Section textContentFlex>
     <h1>Feedback and Graphics</h1>
     <p>
       In general, I polish the animations, added running particles, and among
@@ -78,7 +78,7 @@ import Section from "../../../components/Section.astro";
       cheeses themselves
     </p>
   </Section>
-  <Section defaultFlex>
+  <Section textContentFlex>
     <h1>Optimizations</h1>
     <p>One of the most notable optimization is the audio.</p>
     <p>
@@ -106,7 +106,7 @@ import Section from "../../../components/Section.astro";
       <Fragment slot="after"> </Fragment>
     </ComparisonContainer> -->
   </Section>
-  <Section defaultFlex>
+  <Section textContentFlex>
     <h1>Easter Eggs</h1>
     <p>
       To help engage the player a bit, I added easter eggs! Some were from the
@@ -148,7 +148,7 @@ import Section from "../../../components/Section.astro";
       state.
     </p>
   </Section>
-  <Section defaultFlex>
+  <Section textContentFlex>
     <h1>Conclusion</h1>
     <p>
       All of these things adds up together in this small and short experience.
