--- a/src/pages/comp-experience/web/index.astro
+++ b/src/pages/comp-experience/web/index.astro
@@ -36,7 +36,8 @@ import {
     <h1 class="text-center mb-8">Back-end</h1>
     <BadgeContainer src={backendExperience} />
   </Section>
-  <Section defaultFlex>
+  </div>
+  <Section textContentFlex>
     <h1 class="text-center">This site is made in <b>Astro</b></h1>
     <p>
       My original portfolio site was made in <b>Vite</b> and <b>React</b>. In
@@ -52,7 +53,7 @@ import {
   <Section>
     <!-- Insert contact form -->
   </Section>
-  <Section defaultFlex>
+  <Section textContentFlex>
     <h1>College Experience</h1>
     <p>
       In Fanshawe, I have to develop a mobile application using React Native and
