--- a/src/pages/comp-experience/game/combo-spells.astro
+++ b/src/pages/comp-experience/game/combo-spells.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from "../../layouts/BaseLayout.astro";
-import Section from "../../components/Section.astro";
-import ComparisonContainer from "../../components/ComparisonContainer.astro";
+import Layout from "../../../layouts/BaseLayout.astro";
+import Section from "../../../components/Section.astro";
+// import ComparisonContainer from "../../../components/ComparisonContainer.astro";
 ---
 
 <Layout title="Combo Spells" description="" prevNav="/game">
@@ -14,7 +14,7 @@ import ComparisonContainer from "../../components/ComparisonContainer.astro";
     </p>
     <p>Originally a highschool Java final project, but was updated overtime.</p>
   </Fragment>
-  <Section defaultFlex>
+  <Section textContentFlex>
     <h1>School Project</h1>
     <p>
       Java is actually my first programming language I learned back in Montcalm,
@@ -26,7 +26,7 @@ import ComparisonContainer from "../../components/ComparisonContainer.astro";
     </p>
     <p>INSERT CLIP</p>
   </Section>
-  <Section defaultFlex>
+  <Section textContentFlex>
     <h1>Game Design</h1>
     <p>INSERT ORIGINAL DESIGN</p>
     <p>
@@ -40,7 +40,7 @@ import ComparisonContainer from "../../components/ComparisonContainer.astro";
       mechanical depth, and keeping it simple.
     </p>
   </Section>
-  <Section defaultFlex>
+  <Section textContentFlex>
     <h2>Controls</h2>
     <p>
       Motion Inputs is something I don't know how to create. And I don't want to
@@ -59,7 +59,7 @@ import ComparisonContainer from "../../components/ComparisonContainer.astro";
     <p>INSERT CONTROL SCHEME</p>
     <p>It's unnecessarily complicated.</p>
   </Section>
-  <Section defaultFlex>
+  <Section textContentFlex>
     <h2>Spell Synergy with Statuses</h2>
     <p>
       To make the game more interesting, I decided to have spells inflict status
@@ -78,7 +78,7 @@ import ComparisonContainer from "../../components/ComparisonContainer.astro";
       amount for those interested for a challenge.
     </p>
   </Section>
-  <Section defaultFlex>
+  <Section textContentFlex>
     <h1>General Improvements</h1>
     <p>
       The graphics used in this game is hard-coded with the JFrame graphic
@@ -91,16 +91,16 @@ import ComparisonContainer from "../../components/ComparisonContainer.astro";
       And from the oldest version and to the latest, I say I did a pretty good
       job!
     </p>
-    <ComparisonContainer>
+    <!-- <ComparisonContainer>
       <Fragment slot="before"></Fragment>
       <Fragment slot="after"></Fragment>
-    </ComparisonContainer>
+    </ComparisonContainer> -->
     <p>The other parts, such as the grass...</p>
     <p>INSERT IMG</p>
     <p>And clouds as well!</p>
     <p>INSERT IMG</p>
   </Section>
-  <Section defaultFlex>
+  <Section textContentFlex>
     <h1>Struggles</h1>
     <p>
       I didn't know how classes and objects were in programming. Or even how the
@@ -125,7 +125,7 @@ import ComparisonContainer from "../../components/ComparisonContainer.astro";
       out everything. (I lost the source code, so no examples of it)
     </p>
   </Section>
-  <Section defaultFlex>
+  <Section textContentFlex>
     <h1>Conclusion</h1>
     <p>
       From a 3 week highschool project with 3 months worth of updates, I was
