--- a/src/pages/comp-experience/game/index.astro
+++ b/src/pages/comp-experience/game/index.astro
@@ -13,18 +13,18 @@ import ProjectContainer from "../../../components/ProjectContainer.astro";
   title="Game"
   description="Matthew Ubalde game development portfolio. Have experience in Godot and Unity to create well designed games."
 >
-  <Fragment slot="sidebar">
+  <div>
     <h1>Game Development</h1>
     <p>
       Have experience in creating games using Godot and Unity in Fanshawe and in
       my spare time.
     </p>
-  </Fragment>
+  </div>
   <Section>
     <h1 class="mb-8 text-center">Game Experiences</h1>
     <BadgeContainer src={gameExperience} />
   </Section>
-  <Section defaultFlex>
+  <Section textContentFlex>
     <h1>Game Projects</h1>
     <p>
       I make games as hobby as I found the game development process fun and
