--- a/src/pages/comp-experience/game/index.astro
+++ b/src/pages/comp-experience/game/index.astro
@@ -24,7 +24,7 @@ import ProjectContainer from "../../../components/ProjectContainer.astro";
     <h1 class="mb-8 text-center">Game Experiences</h1>
     <BadgeContainer src={gameExperience} />
   </Section>
-  <Section textContentFlex>
+  <Section textContent>
     <h1>Game Projects</h1>
     <p>
       I make games as hobby as I found the game development process fun and
