--- a/src/pages/comp-experience/software/index.astro
+++ b/src/pages/comp-experience/software/index.astro
@@ -25,7 +25,7 @@ import ListContainer from "../../../components/ListContainer.astro";
     <h1 class="text-center mb-8">Software Experiences</h1>
     <BadgeContainer src={softwareExperience} />
   </Section>
-  <Section textContentFlex>
+  <Section textContent>
     <h1>Experiences in Fanshawe</h1>
     <p>Throughout my CPA3 program, I've learned many things.</p>
     <ListContainer>
