--- a/src/pages/comp-experience/web/index.astro
+++ b/src/pages/comp-experience/web/index.astro
@@ -53,7 +53,8 @@ import {
   <Section>
     <!-- Insert contact form -->
   </Section>
-  <Section textContentFlex>
+  </div>
+  <Section textContent>
     <h1>College Experience</h1>
     <p>
       In Fanshawe, I have to develop a mobile application using React Native and
