redesign the main index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,10 +10,10 @@ import Section from "../components/Section.astro";
   description="Matthew Ubalde portfolio. Ranging from Web and Game Development, and Creative Arts!"
 >
   <!-- Introduction -->
-  <div class="relative min-h-screen h-fit w-screen">
+  <div class="relative h-screen w-screen">
     <Section
       noPadding
-      class="absolute inset-y-12 flex flex-col justify-center p-8 py-24 bg-cyan-950 bg-opacity-50 rounded-md w-1/2"
+      class="absolute top-8 bottom-12 flex flex-col justify-start h-fit p-8 py-24 bg-cyan-950 bg-opacity-50 rounded-md w-1/2"
     >
       <p class="text-xs">My name is...</p>
       <h1 class="text-5xl mb-2">Matthew Ubalde</h1>
