--- a/src/pages/comp-experience/web/index.astro
+++ b/src/pages/comp-experience/web/index.astro
@@ -17,57 +17,81 @@ import {
   title="Web"
   description="Matthew Ubalde web development portfolio. Have ome experienced in React, React Native, and Vue. Used Gatsby, and now Astro, to develop websites."
 >
-  <Fragment slot="sidebar">
-    <h1>Web Development</h1>
-    <p class="font-light">
-      Can create SPA with React and Vue. Used Astro to create this portfolio
-      website as a MPA for faster loading speeds.
-    </p>
-    <p class="font-light">
-      With experience in web development, I have used React Native in
-      conjunction with Expo to create a mobile application.
-    </p>
-  </Fragment>
-  <Section>
-    <h1 class="text-center mb-8">Front-end</h1>
-    <BadgeContainer src={frontendExperience} />
+  <Section textContent class="mx-auto w-1/3">
+    <p>Currently looking for an intern position as Front-end Developer!</p>
   </Section>
-  <Section>
-    <h1 class="text-center mb-8">Back-end</h1>
-    <BadgeContainer src={backendExperience} />
+  <Section textContent class="mx-auto w-2/3">
+    <h1>Experience Summary</h1>
+    <p>
+      Was taught how to do front-end and back-end in the CPA3 program at
+      Fanshawe college. Able to use AWS with EC2 to host websites that everyone
+      can have access to publicly.
+    </p>
+    <p>
+      Personally self-taught on other frameworks and using the skills I've
+      learned so far for other passion projects.
+    </p>
   </Section>
+  <div class="flex flex-col sm:flex-row justify-between gap-8 m-8">
+    <Section noPadding noMargin class="w-1/2 p-4">
+      <h1 class="text-center mb-2">Front-end</h1>
+      <BadgeContainer src={frontendExperience} />
+    </Section>
+    <Section noPadding noMargin class="w-1/2 p-4">
+      <h1 class="text-center mb-2">Back-end</h1>
+      <BadgeContainer src={backendExperience} />
+    </Section>
   </div>
-  <Section textContentFlex>
-    <h1 class="text-center">This site is made in <b>Astro</b></h1>
+  <Section textContent class="mx-auto w-2/3">
+    <h1>Experiences in Fanshawe</h1>
     <p>
-      My original portfolio site was made in <b>Vite</b> and <b>React</b>. In
-      the spirit of learning, I learned and discovered other frameworks to
-      develop websites.
+      Was taught on the front-end with <b>Vue.js</b>, <b>React</b>, and <b
+        >Angular</b
+      >. And in the back-end, I was taught with <b>ASP.NET with C#</b> and <b
+        >Java Spring Beans</b
+      >.
     </p>
     <p>
-      So before choosing Gatsby with React, I found myself using Astro with
-      Tailwind to style the site! And with React for specific functionalities.
+      I was able to create a full-stack application and was able to host it on
+      <b>AWS</b> with their <b>EC2</b> service.
     </p>
-    <p>Like the contact form!</p>
   </Section>
-  <Section>
-    <!-- Insert contact form -->
-  </Section>
+  <div class="flex flex-row gap-8 m-8">
+    <Section noMargin textContent class="w-1/2">
+      <h1 class="text-center">What's this Website's Framework</h1>
+      <p>
+        This website made with <b>Astro</b>, <b>Vue.js</b>, and <b>Tailwind</b>.
+        Currently hosted in <b>Github</b>.
+      </p>
+      <p>
+        Originally, my portfolio was purely made in <b>React</b> and <b
+          >Tailwind</b
+        >. However, I wanted to try another framework that I haven't tried yet
+        that might be better for my own use case.
+      </p>
+      <p>
+        I've tried with Gatsby with React for content collections, but found a
+        simplier and better approach with Astro.
+      </p>
+    </Section>
+    <Section noMargin textContent class="flex-grow my-auto">
+      <h2>Other websites?</h2>
+      <p>
+        I've made a couple of websites with Astro for personal projects and made
+        success with it. Which can be found here...
+      </p>
+      <div class="flex">
+        <div>
+          <h3>Lorem Ispum</h3>
+          Enim ex quis duis duis reprehenderit in minim in dolore veniam excepteur
+          esse.
+        </div>
+        <div>
+          <h3>Lorem Ispum</h3>
+          Enim ex quis duis duis reprehenderit in minim in dolore veniam excepteur
+          esse.
+        </div>
+      </div>
+    </Section>
   </div>
-  <Section textContent>
-    <h1>College Experience</h1>
-    <p>
-      In Fanshawe, I have to develop a mobile application using React Native and
-      Expo for testing.
-    </p>
-    <p>
-      And the application is called "Until Finish". A task management software
-      that's focus-oriented and intuitive application.
-    </p>
-    <p>
-      A lot of the web development skills were used to learn and adapt this
-      application to reality. I'm able to autheticate in login, and about to
-      implement the cloud feature to store the tasks between phones!
-    </p>
-  </Section>
 </Layout>
