started to rework software exp page

--- a/src/pages/comp-experience/software/index.astro
+++ b/src/pages/comp-experience/software/index.astro
@@ -21,11 +21,25 @@ import ListContainer from "../../../components/ListContainer.astro";
       development. Able to adapt and learn quickly when needed.
     </p>
   </Fragment>
+  <Section textContent class="mx-auto w-2/3">
+    <h1>Experience Summary</h1>
+    <p>
+      Was taught in various languages and frameworks. Have solid foundations on
+      relatively low-level langauages on C/C++. Able to make desktop
+      applications with Java's GUI framework, and able to make Android
+      applciations with Android Studio.
+    </p>
+    <p>
+      Worked with MySQL and able to help design and maintain well-design
+      databases to suit the company's requirements.
+    </p>
+    <p>Have used OpenGL.</p>
+  </Section>
   <Section>
     <h1 class="text-center mb-8">Software Experiences</h1>
     <BadgeContainer src={softwareExperience} />
   </Section>
-  <Section textContent>
+  <!-- <Section textContent>
     <h1>Experiences in Fanshawe</h1>
     <p>Throughout my CPA3 program, I've learned many things.</p>
     <ListContainer>
@@ -47,5 +61,5 @@ import ListContainer from "../../../components/ListContainer.astro";
       </li>
       <li>Able to create queries in database for any needs.</li>
     </ListContainer>
-  </Section>
+  </Section> -->
 </Layout>
