--- a/src/pages/comp-experience/game/index.astro
+++ b/src/pages/comp-experience/game/index.astro
@@ -1,9 +1,7 @@
 ---
-import Layout from "../../../layouts/BaseLayout.astro";
+import Layout from "../../../layouts/PageLayout.astro";
 import Section from "../../../components/Section.astro";
-import ExperienceBadge from "../../../components/ExperienceBadge.astro";
 import BadgeContainer from "../../../components/BadgeContainer.astro";
-import ProjectShowcase from "../../../components/ProjectShowcase.astro";
 
 import { gameProjects, gameExperience } from "../../../data/game";
 import ProjectContainer from "../../../components/ProjectContainer.astro";
@@ -13,26 +11,26 @@ import ProjectContainer from "../../../components/ProjectContainer.astro";
   title="Game"
   description="Matthew Ubalde game development portfolio. Have experience in Godot and Unity to create well designed games."
 >
-  <div>
-    <h1>Game Development</h1>
-    <p>
-      Have experience in creating games using Godot and Unity in Fanshawe and in
-      my spare time.
-    </p>
+  <div class="flex flex-col sm:flex-row justify-between gap-8 m-8">
+    <Section noMargin textContent class="w-1/3">
+      <h1>Experience Summary</h1>
+      <p>
+        Was taught on how to use the Unity Engine, but developed games as a
+        side-hobby with Godot. This is purely as an interest, but willing to try
+        to break into this industry when given the opportunity.
+      </p>
+    </Section>
+    <Section noMargin class="flex-grow">
+      <h1 class="text-center">Game Experiences</h1>
+      <BadgeContainer src={gameExperience} />
+    </Section>
   </div>
-  <Section>
-    <h1 class="mb-8 text-center">Game Experiences</h1>
-    <BadgeContainer src={gameExperience} />
-  </Section>
-  <Section textContent>
-    <h1>Game Projects</h1>
+  <Section textContent class="mx-auto w-2/3">
+    <h1>Games for Fun</h1>
     <p>
-      I make games as hobby as I found the game development process fun and
-      exciting! Personally, I enjoy think of ways to make games that are fun,
-      simple, and interesting through deep mechanics, or fun rewards.
-    </p>
-    <p>
-      You can view each individual projects and my thinking process within them.
+      These are purely made out of fun as I found the game development
+      interesting since I was really young. I like making games that are simple,
+      but tried to make it deep and rewarding at the same time.
     </p>
     <ProjectContainer src={gameProjects} />
   </Section>
