replace BaseLayout with PageLayout on game example pages

--- a/src/pages/comp-experience/game/combo-spells.astro
+++ b/src/pages/comp-experience/game/combo-spells.astro
@@ -1,10 +1,10 @@
 ---
-import Layout from "../../../layouts/BaseLayout.astro";
+import Layout from "../../../layouts/PageLayout.astro";
 import Section from "../../../components/Section.astro";
 // import ComparisonContainer from "../../../components/ComparisonContainer.astro";
 ---
 
-<Layout title="Combo Spells" description="" prevNav="/game">
+<Layout title="Combo Spells" description="">
   <Fragment slot="sidebar">
     <h1>Combo Spells</h1>
     <p>
