--- a/src/pages/comp-experience/game/king-of-the-cheese.astro
+++ b/src/pages/comp-experience/game/king-of-the-cheese.astro
@@ -1,10 +1,10 @@
 ---
-import Layout from "../../../layouts/BaseLayout.astro";
+import Layout from "../../../layouts/PageLayout.astro";
 import Section from "../../../components/Section.astro";
 // import ComparisonContainer from "../../components/ComparisonContainer.astro";
 ---
 
-<Layout title="King of the Cheese" description="Game made" prevNav="/game">
+<Layout title="King of the Cheese" description="Game made">
   <Fragment slot="sidebar">
     <h1>King of the Cheese</h1>
     <p>
