revert back to the original Navbar made in Vue

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,8 +2,8 @@
 import Footer from "../components/Footer.astro";
 import BaseHead from "../components/Metadata/BaseHead.astro";
 
-// import Navbar from "../components/Navbar.vue";
-import Navbar from "../components/Navbar.astro";
+import Navbar from "../components/Navbar.vue";
+// import Navbar from "../components/Navbar.astro";
 
 const pathname = Astro.url.pathname;
 const currentPath = pathname;
