--- a/src/pages/comp-experience/software/index.astro
+++ b/src/pages/comp-experience/software/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../../../layouts/BaseLayout.astro";
+import Layout from "../../../layouts/PageLayout.astro";
 import Section from "../../../components/Section.astro";
 
 import softwareExperience from "../../../data/softwareExperience";
