made the ProjectShowcase in game exp more neater

--- a/src/pages/comp-experience/game/index.astro
+++ b/src/pages/comp-experience/game/index.astro
@@ -47,13 +47,13 @@ console.log(experiences);
       <BadgeContainer src={gameExperience} />
     </Section>
   </div>
-  <Section textContent class="mx-auto w-2/3">
+  <Section textContent class="mx-auto w-2/3 sticky top-28">
     <h1>Games for Fun</h1>
     <p>
       These are purely made out of fun as I found the game development
       interesting since I was really young. I like making games that are simple,
       but tried to make it deep and rewarding at the same time.
     </p>
-    <ProjectContainer src={gameProjects} />
   </Section>
+  <ProjectContainer src={gameProjects} />
 </Layout>
