--- a/src/components/ProjectShowcase.astro
+++ b/src/components/ProjectShowcase.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import type { ProjectShowcase } from "../const";
+import Section from "./Section.astro";
 
 interface Props {
   src: ProjectShowcase;
@@ -9,24 +10,19 @@ interface Props {
 const { src } = Astro.props;
 ---
 
-<a
-  class="relative group flex justify-center items-center w-2/4 h-72 rounded-lg bg-gray-800 hover:scale-105 active:scale-95 transition-transform overflow-hidden"
-  href={src.coverImage.href}
->
-  <Image
-    class="absolute top-0 w-full h-full"
-    src={src.coverImage.src}
-    alt={src.coverImage.alt}
-    width={1600}
-    height={900}
-  />
-  <div
-    class="p-4 rounded-lg z-10 bg-black bg-opacity-50
-            scale-0 group-hover:scale-100 group-active:scale-75 transition-transform"
-  >
-    <h1 class="text-3xl">
-      {src.title}
-    </h1>
-    {src.description && <p class="text-2xl font-light">{src.description}</p>}
-  </div>
-</a>
+<div class="flex flex-row gap-4">
+  <Section noMargin textContent class="w-1/4 h-fit my-auto content-center">
+    <h2 class="text-left">{src.title}</h2>
+    <p class="text-left">{src.description}</p>
+    <a href={src.coverImage.href}>Check it out!</a>
+  </Section>
+  <Section noMargin class="flex justify-center items-center h-1/2 flex-grow">
+    <Image
+      class="w-2/3 h-1/2 object-cover"
+      src={src.coverImage.src}
+      alt={src.coverImage.alt}
+      width={800}
+      height={450}
+    />
+  </Section>
+</div>
