--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -26,7 +26,7 @@ const {
     !noPadding && "px-8 py-4",
     !noMargin && "m-8",
     !noRounded && "rounded-md",
-    textContent && " space-y-2 text-center",
+    textContent && " space-y-2 text-center content-center",
   ]}
   {...props}
 >
