make the game experience area more smaller

--- a/src/pages/comp-experience/game/index.astro
+++ b/src/pages/comp-experience/game/index.astro
@@ -34,7 +34,7 @@ console.log(experiences);
   description="Matthew Ubalde game development portfolio. Have experience in Godot and Unity to create well designed games."
 >
   <div class="flex flex-col sm:flex-row justify-between gap-8 m-8">
-    <Section noMargin textContent class="w-1/3">
+    <Section noMargin textContent class="flex-grow">
       <h1>Experience Summary</h1>
       <p>
         Was taught on how to use the Unity Engine, but developed games as a
@@ -42,7 +42,7 @@ console.log(experiences);
         to break into this industry when given the opportunity.
       </p>
     </Section>
-    <Section noMargin class="flex-grow">
+    <Section noMargin class="w-2/4">
       <h1 class="text-center">Game Experiences</h1>
       <BadgeContainer src={gameExperience} />
     </Section>
